# hla_unity_plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Documentation/: Documentation.md
Documentation/FOM/: BoxFOM.xml
src/: BoxObject.cpp  BoxObject.h  DataInterface.h  Debug.cpp  Debug.h  StringUtils.cpp  StringUtils.h  baseFederate.cpp  baseFederate.h  main.cpp
